# life-after-graphics-course

./: .gitignore  CMakeLists.txt  README.md
cmake/: thirdparty.cmake
common/: CMakeLists.txt
common/gui/: ImGuiRenderer.cpp  ImGuiRenderer.hpp
common/render_utils/: CMakeLists.txt  QuadRenderer.cpp  QuadRenderer.hpp
common/scene/: CMakeLists.txt  SceneLights.cpp  SceneLights.hpp  SceneManager.cpp  SceneManager.hpp  SceneMaterials.cpp  SceneMaterials.hpp  SceneMeshes.cpp  SceneMeshes.hpp
common/scene/light/: AmbientLight.h  DirectionalLight.h  FinitePointLight.h  InfinitePointLight.h
common/wsi/: ButtonState.hpp  CMakeLists.txt  KeyToGlfw.hpp  KeyboardKey.hpp  Mouse.hpp  MouseButton.hpp  MouseButtonToGlfw.hpp  OsWindow.cpp  OsWindow.hpp  OsWindowingManager.cpp  OsWindowingManager.hpp
myrenderer/: CMakeLists.txt  FramePacket.hpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
myrenderer/shaders/: BRDF.h  SurfacePointInfo.h  g_buffer_pass.frag  g_buffer_pass.vert  resolve_pass.frag  resolve_pass.vert
resources/scenes/DamagedHelmet/: DamagedHelmet.gltf
tasks/task1/: App.cpp  WorldRenderer.cpp
tasks/task1/shaders/: BRDFCommon.h  LightPassVertImpl.h
